# SQL-Full-guide

./: pyproject.toml
SQL-Full-guide/: README.md  pyproject.toml
SQL-Full-guide/src/sql_full_guide/: CUSTOMERS  Database_book_A  Database_book_A-journal  Database_book_A.sqbpro  OFFICES  ORDERS  PRODUCTS  SALESREPS  SQL2_instructions.txt  __init__.py  easy_AGGREGATE_funcks.py  easy_DO_CHANGES.py  easy_INTEGRITY.py  easy_MANY_TABLES.py  easy_SELECT.py  easy_SUBQUIERY_and_QUIERIES_EXPRESSIONS.py  easy_TRANSACTIONS.py  launch.txt  make_db.py  quiery.sql
SQL-Full-guide/src/sql_full_guide/DATA_SQL/: .project  DATA_BOOK_A  DATA_BOOK_A-journal  DATA_BOOK_A.sqbpro  DATA_BOOK_A.sqlite.sqbpro  DAatabase_book_A_1  Database_book_A.sqbpro
SQL-Full-guide/src/sql_full_guide/DATA_SQL/.dbeaver/: project-settings.json
SQL-Full-guide/src/sql_full_guide/DATA_SQL/Chapters_[13..16]_database_structure/: adding_some_triggers  create_db_1  create_schema  create_view  create_view_more  defense  updating_views  using_views
SQL-Full-guide/src/sql_full_guide/DATA_SQL/DB_from_dbeaver/.dbeaver/: project-settings.json
SQL-Full-guide/src/sql_full_guide/DATA_SQL/QUIERIES/: FIRST_QUIERY  QUIERY_CUSTOMERS  QUIERY_OFFICES  QUIERY_ORDERS  QUIERY_PRODUCTS  QUIERY_SALESREPS  QUIERY_TABLES
SQL-Full-guide/src/sql_full_guide/DATA_SQL/csv_s/: ORDERS
SQL-Full-guide/src/sql_full_guide/DATA_SQL/df_test/: .project
SQL-Full-guide/src/sql_full_guide/DATA_SQL/df_test/.dbeaver/: project-settings.json
SQL-Full-guide/tests/: __init__.py
