[tool.poetry]
name = "sql-full-guide"
version = "0.1.0"
description = ""
authors = ["Sergo448 <Sergey.6362@mail.ru>"]
readme = "README.md"
packages = [{include = "sql_full_guide", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
